--- a/a.css
+++ b/a.css
@@ -1,4 +1,4 @@
-/* a.css July 2020 by athouriste,com/css  */
+/* a.css July 2020 by athouriste.com/css  */
 html{box-sizing:border-box}*,*:before,*:after{box-sizing:inherit}
 /*Jan Egil,Borge Refsnes,Nicolas Gallagher,Jonathan Neal */
 html{-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%}body{margin:0}
